fix: no-wrap class

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -155,7 +155,7 @@ body {
   text-overflow: ellipsis;
 }
 
-.is-white-space-nowrap {
+.no-wrap {
   white-space: nowrap;
 }
 
